--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,7 @@ section {
   .main-nav-link:link,
   .main-nav-link:visited {
     font-size: 12px;
+    padding: 8px 3px;
   }
 }
 
